--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This version of SimpleHelpTickets is not recommended to use on public servers before knowing what it does.
 
-I(Fronix) have modified SHT to fit our server (Maera.se) there for I have added more commands and removed some DB support since we only use MySQL.
+I have modified SHT to fit our server (Maera.se) there for I have added more commands and removed some DB support since we only use MySQL.
 
 Requirements:
 MyChunk
